--- a/source/form.html
+++ b/source/form.html
@@ -2,136 +2,161 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta content="width=320" name="viewport">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>HTML Academy: Мишка</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
-      <a href="index.html" class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="150" height="30" alt="Мишка">
-      </a>
-      <button class="page-header__toggle" type="button"></button>
-      <button class="page-header__toggle page-header__toggle--close" type="button"></button>
-      <div class="page-header__wrapper">
-        <ul class="page-header__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link link" href="catalog.html">Каталог товаров</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link link" href="">Вязание на заказ</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link link" href="">Поиск по сайту</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link link" href="#">Корзина: пока пуста</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-    <div class="order-knitting">
-      <div class="order-knitting__fon">
-        <h2 class="order-knitting__title">Вязание на заказ</h2>
-      </div>
-        <p class="order-knitting__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-    </div>
-    <section class="form">
-      <form action="https://echo.htmlacademy.ru" method="get">
-        <div class="form__type filter">
-          <h2 class="filter__title">Тип</h2>
-          <ul class="filter__list type">
-            <li class="type__item">
-              <input class="visually-hidden type__input type__input--radio" type="radio" name="accessories" id="accessories-id" checked>
-              <label class="type__name" for="accessories-id">Аксессуар для интерьера</label>
-            </li>
-            <li class="type__item">
-              <input class="visually-hidden type__input type__input--radio" type="radio" name="toy" id="toy-id">
-              <label class="type__name" for="toy-id">Детская игрушка</label>
-            </li>
-          </ul>
+    <div class="center-wrapper">
+      <header class="page-header">
+        <a href="index.html" class="page-header__logo">
+          <img class="page-header__logo-mobile" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+          <img class="page-header__logo-tablet" src="img/logo-tablet.svg" width="113" height="46" alt="Мишка">
+          <img class="page-header__logo-desktop" src="img/logo-desktop.svg" width="149" height="72" alt="Мишка">
+        </a>
+        <a class="page-header__toggle" href="">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
+            <rect fill="#231F20" width="19.958" height="2"/>
+            <rect y="6" fill="#231F20" width="19.958" height="2"/>
+            <rect y="12" fill="#231F20" width="19.958" height="2"/>
+          </svg>
+        </a>
+        <a class="page-header__toggle page-header__toggle--close" href=""></a>
+
+        <div class="page-header__site-list  page-header__site-list--order1">
+          <a class="page-header__link link" href="catalog.html">Каталог товаров</a>
         </div>
-        <div class="form__type filter">
-          <h2 class="filter__title">Цвет</h2>
-          <ul class="filter__list color">
-            <li class="color__item">
-              <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="white" id="white-id" checked>
-              <label for="white-id">Белый</label>
-            </li>
-            <li class="color__item">
-              <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="grey" id="grey-id" checked>
-              <label class="color__name" for="grey-id">Серый</label>
-            </li>
-            <li class="color__item">
-              <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="tiffany" id="tiffany-id">
-              <label class="color__name" for="tiffany-id">"Тиффани"</label>
-            </li>
-            <li class="color__item">
-              <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="black" id="black-id">
-              <label  class="color__name" for="black-id">Черный</label>
-            </li>
-            <li class="color__item">
-              <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="pink" id="pink-id">
-              <label for="pink-id">Розовый</label>
-            </li>
-            <li class="color__item">
-              <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="orange" id="orange-id">
-              <label for="orange-id">Оранжевый</label>
-            </li>
-          </ul>
+        <div class="page-header__site-list page-header__site-list--order2">
+          <a class="page-header__link link" href="">Вязание на заказ</a>
         </div>
-        <div class="form__type filter">
-          <h2 class="filter__title">ФИО</h2>
-          <div class="filter__list full-name">
-            <div class="full-name__block">
-              <label for="name-id" class="full-name__title">Имя:</label>
-              <input class="full-name__name" type="text" name="name" id="name-id" required placeholder="Введите ваше имя*">
-            </div>
-            <div class="full-name__block">
-              <label for="surname-id" class="full-name__title">Фамилия:</label>
-              <input class="full-name__name" type="text" name="surname" id="surname-id" required placeholder="Укажите фамилию*">
-            </div>
-            <div class="full-name__block">
-              <label for="patronymic-id" class="full-name__title">Отчество:</label>
-              <input class="full-name__name" type="text" name="patronymic" id="patronymic-id" placeholder="Отчество, если желаете">
+        <div class="page-header__site-list page-header__site-list--order3">
+          <a class="page-header__link link" href="">Поиск по сайту</a>
+        </div>
+        <div class="page-header__site-list page-header__site-list--order4">
+          <a class="page-header__link link" href="#">Корзина: пока пуста</a>
+        </div>
+        <div class="page-header__site-list page-header__site-list--order5">
+          <a class="page-header__link page-header__link--desktop link" href="#">Новые поступления</a>
+        </div>
+        <div class="page-header__site-list page-header__site-list--order6">
+          <a class="page-header__link page-header__link--desktop link" href="#">Распродажа</a>
+        </div>
+        <div class="page-header__site-list page-header__site-list--order7">
+          <a class="page-header__link page-header__link--tablet link" href="#">Бесплатная доставка по России</a>
+        </div>
+      </header>
+
+      <div class="order-knitting">
+        <div class="order-knitting__fon"></div>
+          <h2 class="order-knitting__title">Вязание на заказ</h2>
+          <p class="order-knitting__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+      </div>
+
+      <section class="form">
+        <form action="https://echo.htmlacademy.ru" method="get">
+          <div class="form__type filter">
+            <h2 class="filter__title">Тип</h2>
+            <ul class="filter__list type">
+              <li class="type__item">
+                <input class="visually-hidden type__input type__input--radio" type="radio" name="accessories" id="accessories-id" checked>
+                <label class="type__name" for="accessories-id">Аксессуар для интерьера</label>
+              </li>
+              <li class="type__item">
+                <input class="visually-hidden type__input type__input--radio" type="radio" name="toy" id="toy-id">
+                <label class="type__name" for="toy-id">Детская игрушка</label>
+              </li>
+            </ul>
+          </div>
+          <div class="form__type filter">
+            <h2 class="filter__title">Цвет</h2>
+            <ul class="filter__list color">
+              <li class="color__item">
+                <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="white" id="white-id" checked>
+                <label for="white-id">Белый</label>
+              </li>
+              <li class="color__item">
+                <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="grey" id="grey-id" checked>
+                <label class="color__name" for="grey-id">Серый</label>
+              </li>
+              <li class="color__item">
+                <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="tiffany" id="tiffany-id">
+                <label class="color__name" for="tiffany-id">"Тиффани"</label>
+              </li>
+              <li class="color__item">
+                <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="black" id="black-id">
+                <label  class="color__name" for="black-id">Черный</label>
+              </li>
+              <li class="color__item">
+                <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="pink" id="pink-id">
+                <label for="pink-id">Розовый</label>
+              </li>
+              <li class="color__item">
+                <input class="visually-hidden color-input color-input-checkbox" type="checkbox" name="orange" id="orange-id">
+                <label for="orange-id">Оранжевый</label>
+              </li>
+            </ul>
+          </div>
+          <div class="form__type filter">
+            <h2 class="filter__title">ФИО</h2>
+            <div class="filter__list full-name">
+              <div class="full-name__block">
+                <label for="name-id" class="full-name__title">Имя:</label>
+                <input class="full-name__name" type="text" name="name" id="name-id" required placeholder="Введите ваше имя*">
+              </div>
+              <div class="full-name__block">
+                <label for="surname-id" class="full-name__title">Фамилия:</label>
+                <input class="full-name__name" type="text" name="surname" id="surname-id" required placeholder="Укажите фамилию*">
+              </div>
+              <div class="full-name__block">
+                <label for="patronymic-id" class="full-name__title">Отчество:</label>
+                <input class="full-name__name" type="text" name="patronymic" id="patronymic-id" placeholder="Отчество, если желаете">
+              </div>
             </div>
           </div>
           <div class="form__type filter">
-            <div class="filter__list phone">
-              <label for="phone-id" class="filter__title">Тел</label>
-              <input class="phone__namber" type="tel" name="phone" id="phone-id" required placeholder="+7 XXX XXX XX XX*">
-            </div>
-            <div class="filter__list email">
-              <label for="email-id" class="filter__title">E-mail</label>
-              <input class="email__value" type="email" name="email" id="email-id" required placeholder="Ваш Email*">
-            </div>
-            <div class="filter__list comments">
-              <label for="comments-id" class="filter__title">Доп</label>
-              <textarea class="comments__text" type="email" name="email" id="comments-id" rows="4" cols="30" placeholder="Опишите все ваши пожелания к заказу*"></textarea>
-            </div>
+            <label for="phone-id" class="filter__title">Тел</label>
+            <input class="filter__list-phone" type="tel" name="phone" id="phone-id" required placeholder="+7 XXX XXX XX XX*">
           </div>
-        <p class="form-notice">*Поля обязательны для заполнения</p>
-        <button class="form-button button" type="submit">Отправить заказ</button>
-      </form>
-    </section>
-    <footer class="footer">
-      <div class="footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg"></a>
-      </div>
-    </footer>
+          <div class="form__type filter">
+            <label for="email-id" class="filter__title">E-mail</label>
+            <input class="email__value" type="email" name="email" id="email-id" required placeholder="Ваш Email*">
+          </div>
+          <div class="form__type filter">
+                <label for="comment-id" class="filter__title">Доп</label>
+                <textarea class="filter__list-text" type="email" name="email" id="comment-id" rows="4" cols="30" placeholder="Опишите все ваши пожелания к заказу*"></textarea>
+          </div>
+          <div class="filter__wrapper">
+          <p class="form-notice">*Поля обязательны для заполнения</p>
+          <button class="form-button button" type="submit">Отправить заказ</button>
+          </div>
+        </form>
+      </section>
+
+      <footer class="footer">
+        <img src="img/logo-footer.svg" class="footer__logo">
+
+        <div class="footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--twitter link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="27" height="34"></a>
+        </div>
+      </footer>
+
+    </div>
   </body>
 </html>
