--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,9 +10,11 @@
     <div class="center-wrapper">
       <header class="page-header">
         <a href="index.html" class="page-header__logo">
-          <img class="page-header__logo-mobile" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
-          <img class="page-header__logo-tablet" src="img/logo-tablet.svg" width="113" height="46" alt="Мишка">
-          <img class="page-header__logo-desktop" src="img/logo-desktop.svg" width="149" height="72" alt="Мишка">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img src="img/logo-mobile.svg" alt="Мишка">
+          </picture>
         </a>
         <a class="page-header__toggle" href="">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
@@ -55,9 +57,11 @@
           <li class="catalog-item__prodact">
             <div class="catalog-item__wrapper1">
               <a href="" class="prodact__img-link link">
-                <img src="img/photo-hare-mobile@1x.jpg" class="catalog-item__image-mobile" width="258">
-                <img src="img/photo-hare-tablet@1x.jpg" class="catalog-item__image-tablet">
-                <img src="img/photo-hare-desktop@1x.jpg" class="catalog-item__image-desktop">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
+                  <img class="catalog-item__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" alt="">
+                </picture>
               </a>
             </div>
             <div class="catalog-item__wrapper">
@@ -71,9 +75,11 @@
           <li class="catalog-item__prodact">
             <div class="catalog-item__wrapper1">
               <a href="" class="catalog-item__img-link link">
-                <img src="img/photo-bowl-mobile@1x.jpg" class="catalog-item__image-mobile" width="258">
-                <img src="img/photo-bowl-tablet@1x.jpg" class="catalog-item__image-tablet">
-                <img src="img/photo-bowl-desktop@1x.jpg" class="catalog-item__image-desktop" width="316" height="462">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                  <img class="catalog-item__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="">
+                </picture>
               </a>
             </div>
             <div class="catalog-item__wrapper">
@@ -87,9 +93,11 @@
           <li class="catalog-item__prodact">
             <div class="catalog-item__wrapper1">
               <a href="" class="catalog-item__img-link link">
-                <img src="img/photo-toys-mobile@1x.jpg" class="catalog-item__image-mobile" width="258">
-                <img src="img/photo-toys-tablet@1x.jpg" class="catalog-item__image-tablet">
-                <img src="img/photo-toys-desktop@1x.jpg" class="catalog-item__image-desktop">
+                <picture>
+                  <source media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
+                  <img class="catalog-item__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="">
+                </picture>
               </a>
             </div>
             <div class="catalog-item__wrapper">
@@ -106,9 +114,11 @@
       <section class="production-process">
         <div class="production-process__wrapper">
           <h2 class="production-process__title">Процесс производства</h2>
-          <img src="img/video-mobile@1x.jpg" width="258" height="150" class="production-process__img-mobile">
-          <img src="img/video-mobile@1x.jpg" width="668" height="455" class="production-process__img-tablet">
-          <img src="img/video-mobile@1x.jpg" width="682" height="455" class="production-process__img-desktop">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="production-process__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="">
+          </picture>
           <div class="production-process__container">
             <p class="production-process__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
             <button class="production-process__button button" type="button">Сделать заказ</button>
