--- a/source/form.html
+++ b/source/form.html
@@ -10,9 +10,11 @@
     <div class="center-wrapper">
       <header class="page-header">
         <a href="index.html" class="page-header__logo">
-          <img class="page-header__logo-mobile" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
-          <img class="page-header__logo-tablet" src="img/logo-tablet.svg" width="113" height="46" alt="Мишка">
-          <img class="page-header__logo-desktop" src="img/logo-desktop.svg" width="149" height="72" alt="Мишка">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img src="img/logo-mobile.svg" alt="Мишка">
+          </picture>
         </a>
         <a class="page-header__toggle" href="">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
