--- a/source/index.html
+++ b/source/index.html
@@ -10,9 +10,11 @@
     <div class="center-wrapper">
     <header class="page-header">
         <a href="index.html" class="page-header__logo">
-          <img class="page-header__logo-mobile" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
-          <img class="page-header__logo-tablet" src="img/logo-tablet.svg" width="113" height="46" alt="Мишка">
-          <img class="page-header__logo-desktop" src="img/logo-desktop.svg" width="149" height="72" alt="Мишка">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img src="img/logo-mobile.svg" alt="Мишка">
+          </picture>
         </a>
         <a class="page-header__toggle" href="">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
@@ -80,9 +82,11 @@
           </tr>
         </table>
         <div class="popular-product__wrapper-img">
-          <img src="img/triple-set-mobile@1x.jpg" class="popular-product__image-mobile">
-          <img src="img/triple-set-tablet@1x.jpg" class="popular-product__image-tablet" width="333" height="404">
-          <img src="img/triple-set-desktop@1x.jpg" class="popular-product__image-desktop">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+            <img class="popular-product__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Товар недели">
+          </picture>
         </div>
         <p class="popular-product__price">Цена: 990 руб.</p>
         <button class="popular-product__button button" type="button">Заказать</button>
