--- a/source/form.html
+++ b/source/form.html
@@ -7,6 +7,9 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div style="display: none">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <div class="center-wrapper">
       <header class="page-header">
         <a href="index.html" class="page-header__logo">
@@ -17,13 +20,8 @@
           </picture>
         </a>
         <a class="page-header__toggle" href="">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
-            <rect fill="#231F20" width="19.958" height="2"/>
-            <rect y="6" fill="#231F20" width="19.958" height="2"/>
-            <rect y="12" fill="#231F20" width="19.958" height="2"/>
-          </svg>
+          <svg width="19.958px" height="14px"><use xlink:href="#icon-menu-open"></use></svg>
         </a>
-        <a class="page-header__toggle page-header__toggle--close" href=""></a>
 
         <div class="page-header__site-list  page-header__site-list--order1">
           <a class="page-header__link link" href="catalog.html">Каталог товаров</a>
@@ -32,10 +30,10 @@
           <a class="page-header__link link" href="">Вязание на заказ</a>
         </div>
         <div class="page-header__site-list page-header__site-list--order3">
-          <a class="page-header__link page-header__link--hidden link" href="">Поиск по сайту</a>
+          <a class="page-header__link  link" href=""><svg class="page-header__search" width="17.6px" height="17.6px"><use xlink:href="#icon-search"></use></svg><p class="page-header__link--hidden">Поиск по сайту</p></a>
         </div>
         <div class="page-header__site-list page-header__site-list--order4">
-          <a class="page-header__link page-header__link--basket link" href="#">Корзина: пока пуста</a>
+          <a class="page-header__link page-header__link--basket link" href="#"><svg class="page-header__cart" width="20.294px" height="18.849px"><use xlink:href="#icon-cart"></use></svg>Корзина: пока пуста</a>
         </div>
         <div class="page-header__site-list page-header__site-list--order5">
           <a class="page-header__link page-header__link--desktop link" href="#">Новые поступления</a>
@@ -60,7 +58,7 @@
             <h2 class="filter__title">Тип</h2>
             <ul class="filter__list type">
               <li class="type__item">
-                <input class="visually-hidden type__input type__input--radio" type="radio" name="accessories" id="accessories-id" checked>
+                <input class="visually-hidden type__input type__input--radio" type="radio" name="accessories" id="accessories-id">
                 <label class="type__name" for="accessories-id">Аксессуар для интерьера</label>
               </li>
               <li class="type__item">
@@ -135,28 +133,35 @@
       </section>
 
       <footer class="footer">
-        <img src="img/logo-footer.svg" class="footer__logo">
+      <svg width="101.615px" height="34.056px" class="footer__logo" width="50px" height="26.003px"><use xlink:href="#logo-footer"></use></svg>
 
-        <div class="footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--twitter link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
-            </li>
-          </ul>
-        </div>
+      <div class="footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p>
+              <svg width="21.769px" height="21.334px"><use xlink:href="#icon-insta"></use></svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p>
+              <svg width="14.962px" height="27.718px"><use xlink:href="#icon-fb"></use></svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--twitter link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p>
+              <svg width="23.494px" height="20.168px"><use xlink:href="#icon-twitter"></use></svg>
+            </a>
+          </li>
+        </ul>
+      </div>
 
-        <div class="footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="27" height="34"></a>
-        </div>
-      </footer>
+      <div class="footer__copyright copyright">
+        <b class="copyright__text">Разработано</b>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <svg width="26.943px" height="34.09px"><use xlink:href="#logo-htmlacademy"></use></svg>
+        </a>
+      </div>
+    </footer>
 
     </div>
   </body>
