--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,9 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
+    <div style="display: none">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <div class="center-wrapper">
     <header class="page-header">
         <a href="index.html" class="page-header__logo">
@@ -17,11 +20,7 @@
           </picture>
         </a>
         <a class="page-header__toggle" href="">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14" enable-background="new 0 0 19.958 14" xml:space="preserve">
-            <rect fill="#231F20" width="19.958" height="2"/>
-            <rect y="6" fill="#231F20" width="19.958" height="2"/>
-            <rect y="12" fill="#231F20" width="19.958" height="2"/>
-          </svg>
+          <svg width="19.958px" height="14px"><use xlink:href="#icon-menu-open"></use></svg>
         </a>
 
       <div class="page-header__site-list  page-header__site-list--order1">
@@ -31,10 +30,10 @@
         <a class="page-header__link link" href="form.html">Вязание на заказ</a>
       </div>
       <div class="page-header__site-list page-header__site-list--order3">
-        <a class="page-header__link page-header__link--hidden link" href="">Поиск по сайту</a>
+        <a class="page-header__link  link" href=""><svg class="page-header__search" width="17.6px" height="17.6px"><use xlink:href="#icon-search"></use></svg><p class="page-header__link--hidden">Поиск по сайту</p></a>
       </div>
       <div class="page-header__site-list page-header__site-list--order4">
-        <a class="page-header__link  page-header__link--basket link" href="#">Корзина: пока пуста</a>
+        <a class="page-header__link  page-header__link--basket link" href="#"><svg class="page-header__cart" width="20.294px" height="18.849px"><use xlink:href="#icon-cart"></use></svg>Корзина: пока пуста</a>
       </div>
       <div class="page-header__site-list page-header__site-list--order5">
         <a class="page-header__link page-header__link--desktop link" href="#">Новые поступления</a>
@@ -97,14 +96,32 @@
       <h2 class="advantages__title">Коротко о нас:</h2>
       <div class="advantages__list">
         <div class="advantages__wrapper">
-          <div class="advantages__item">Экологически<br class="advantages__hidden"> чистые материалы</div>
-          <div class="advantages__item">Скандинавский стиль<br>по российской цене</div>
-          <div class="advantages__item">Увеличивает лайки<br>на фотографиях</div>
+          <div class="advantages__item">
+            <svg width="31.972px" height="37.301px"><use xlink:href="#icon-feature-flower"></use></svg>
+            <p>Экологически<br class="advantages__hidden"> чистые материалы</p>
+            </div>
+          <div class="advantages__item">
+            <svg width="46.575px" height="27.332px"><use xlink:href="#icon-feature-money"></use></svg>
+            <p>Скандинавский стиль<br>по российской цене</p>
+          </div>
+          <div class="advantages__item">
+            <svg width="33.05px" height="27.857px"><use xlink:href="#icon-feature-heart"></use></svg>
+            <p>Увеличивает лайки<br>на фотографиях</p>
+          </div>
         </div>
         <div class="advantages__wrapper">
-          <div class="advantages__item">Связано вручную с<br>любовью и умилением</div>
-          <div class="advantages__item">Поддержка отечественного производителя</div>
-          <div class="advantages__item">Поставляется в<br>подарочной упаковке</div>
+          <div class="advantages__item">
+            <svg width="34.373px" height="34.373px"><use xlink:href="#icon-feature-ball"></use></svg>
+            <p>Связано вручную с<br>любовью и умилением</p>
+          </div>
+          <div class="advantages__item">
+            <svg width="54.156px" height="23.183px"><use xlink:href="#icon-feature-rocket"></use></svg>
+            <p>Поддержка отечественного производителя</p>
+          </div>
+          <div class="advantages__item">
+            <svg width="32.666px" height="32.486px"><use xlink:href="#icon-feature-gift"></use></svg>
+            <p>Поставляется в<br>подарочной упаковке</p>
+          </div>
         </div>
       </div>
     </section>
@@ -119,14 +136,10 @@
         </div>
         <div class="comments__button-wrapper">
           <button class="comments__prev" type="button"><p class="visually-hidden">Предыдущий отзыв</p>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26.003px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
-              <polygon points="50,11.002 7.659,11.002 15.833,2.828 13.005,0 0,12.998 0.003,13.001 0,13.005 13.005,26.003 15.833,23.175 7.661,15.002 50,15.002 "/>
-            </svg>
+            <svg width="50px" height="26.003px"><use xlink:href="#icon-left-arrow"></use></svg>
           </button>
           <button class="comments__next" type="button"><p class="visually-hidden">Следующий отзыв</p>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26.003px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
-              <polygon points="0,11.002 42.341,11.002 34.166,2.828 36.995,0 50,12.998 49.996,13.001 50,13.005 36.995,26.003 34.166,23.175 42.339,15.002 0,15.002 "/>
-            </svg>
+            <svg width="50px" height="26.003px"><use xlink:href="#icon-right-arrow"></use></svg>
           </button>
         </div>
       </div>
@@ -150,26 +163,33 @@
     </section>
 
     <footer class="footer">
-      <img src="img/logo-footer.svg" class="footer__logo">
+      <svg width="101.615px" height="34.056px" class="footer__logo" width="50px" height="26.003px"><use xlink:href="#logo-footer"></use></svg>
 
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--instagram link" href="https://www.instagram.com/htmlacademy"><p class="visually-hidden">Мы в Инстаграме</p>
+              <svg width="21.769px" height="21.334px"><use xlink:href="#icon-insta"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p></a>
+            <a class="social__link social__link--facebook link" href="https://www.facebook.com/htmlacademy"><p class="visually-hidden">Мы в Фейсбуке</p>
+              <svg width="14.962px" height="27.718px"><use xlink:href="#icon-fb"></use></svg>
+            </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--twitter link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p></a>
+            <a class="social__link social__link--twitter link" href="https://twitter.com/htmlacademy_ru"><p class="visually-hidden"> Мы в Твиттере</p>
+              <svg width="23.494px" height="20.168px"><use xlink:href="#icon-twitter"></use></svg>
+            </a>
           </li>
         </ul>
       </div>
 
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="27" height="34"></a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <svg width="26.943px" height="34.09px"><use xlink:href="#logo-htmlacademy"></use></svg>
+        </a>
       </div>
     </footer>
 
