--- a/source/catalog.html
+++ b/source/catalog.html
@@ -119,7 +119,7 @@
       <section class="production-process">
         <div class="production-process__wrapper">
           <h2 class="production-process__title">Процесс производства</h2>
-          <picture>
+          <picture class="production-process__img-conteiner">
             <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
             <img class="production-process__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="">
